syntax = "proto3";
package tictactoe.tictactoe;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "tic-tac-toe/x/tictactoe/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateGame(MsgCreateGame) returns (MsgCreateGameResponse);
  rpc AcceptGame(MsgAcceptGame) returns (MsgAcceptGameResponse);
  rpc PerformMove(MsgPerformMove) returns (MsgPerformMoveResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateGame {
  string creator = 1;
}

message MsgCreateGameResponse {
  uint32 gameId = 1;
}

message MsgAcceptGame {
  string creator = 1;
  uint32 gameId = 2;
}

message MsgAcceptGameResponse {
}

message MsgPerformMove {
  string creator = 1;
  uint32 gameId = 2;
  uint32 index = 3;
}

message MsgPerformMoveResponse {
}

// this line is used by starport scaffolding # proto/tx/message
